Implementación de verificación de cuenta por email y configuración de múltiples proveedores de correo
- Se agregó el campo 'accountVerified' en la entidad 'UserDtls' para gestionar el estado de verificación de la cuenta.
- Se actualizaron las clases 'EmailService' y las configuraciones de Hotmail y Gmail para permitir el envío de correos desde múltiples proveedores.
- Se agregó el controlador 'VerificationController' que permite la verificación de cuentas mediante un token enviado por email.
- Mejoras en la clase 'UserService' para gestionar el flujo de verificación de usuarios.
- Aplicación ahora envía correos de verificación a cualquier email, incluyendo Hotmail y Gmail.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,11 @@ spring.datasource.password=36River449millo.
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.mail.host=smtp.gmail.com
+# Hotmail por defecto
+spring.mail.host=smtp.office365.com
 spring.mail.port=587
-spring.mail.username=tu-email@gmail.com
-spring.mail.password=tu-password
+spring.mail.username=emilio.ifunes@hotmail.es
+spring.mail.password=36River449.funes
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -19,3 +20,4 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 server.error.include-message=always
 server.error.include-binding-errors=always
 server.error.include-stacktrace=always
+
